--- a/apps/scanner/package.json
+++ b/apps/scanner/package.json
@@ -1,12 +1,30 @@
 {
-  "name": "scanner",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "@storageguard/scanner",
+  "version": "0.1.0",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsc -w",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "test": "jest",
+    "lint": "eslint \"{src,test}/**/*.ts\" --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "@nestjs/common": "^10.0.0",
+    "@nestjs/core": "^10.0.0",
+    "@nestjs/schedule": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
+    "@aws-sdk/client-s3": "^3.0.0",
+    "@aws-sdk/client-sts": "^3.0.0",
+    "@storageguard/database": "*",
+    "@storageguard/shared": "*",
+    "@storageguard/types": "*"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^10.0.0",
+    "@types/node": "^20.0.0",
+    "typescript": "^5.0.0"
+  }
 }
