feat: Add AWS SQS configuration for event ingestion to the environment variables.

--- a/.env
+++ b/.env
@@ -6,3 +6,9 @@ DB_PASSWORD=postgres
 DB_DATABASE=storageguard
 AUTH0_ISSUER_URL=https://your-tenant.auth0.com/
 AUTH0_AUDIENCE=https://api.storageguard.com
+
+# AWS SQS for event ingestion
+AWS_SQS_QUEUE_URL=https://sqs.us-east-1.amazonaws.com/123456789012/storageguard-events
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-access-key
+AWS_SECRET_ACCESS_KEY=your-secret-key
